<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsecureDataStorageIVActivity">
    <Button
        android:id="@+id/ids4button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_txt_password"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_centerHorizontal="true"
        android:onClick="saveCredentials"
        android:text="@string/btn_save" />

    <EditText
        android:id="@+id/edit_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_txt_user"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/edit_txt_password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_txt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/edit_txt_user"
        android:inputType="text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/txt_view_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="fill_horizontal|fill_vertical"
        android:text="@string/txt_view_intro_ids_iv"
        android:textAlignment="center"
        android:textColor="@color/material_grey_600"
        android:textSize="32sp" />
</RelativeLayout>