<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/button_insecure_data_storage_i"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/segu_info" />

    <TextView
        android:id="@+id/txt_view_select_a_challenge"
        android:layout_width="305dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_view_select_a_challenge"
        android:textAlignment="center"
        android:textColor="@color/material_grey_600"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_insecure_data_storage_i"
        android:layout_width="353dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:onClick="goToInsecureDataStorageI"
        android:text="@string/btn_insecure_data_storage_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#f3972b" />

    <Button
        android:id="@+id/button_insecure_data_storage_ii"
        android:layout_width="358dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="goToInsecureDataStorageII"
        android:text="@string/btn_insecure_data_storage_ii"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_insecure_data_storage_i"
        app:strokeColor="#f3972b" />

    <Button
        android:id="@+id/button_insecure_data_storage_iii"
        android:layout_width="356dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="goToInsecureDataStorageIII"
        android:text="@string/btn_insecure_data_storage_iii"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_insecure_data_storage_ii"
        app:strokeColor="#f3972b" />

    <Button
        android:id="@+id/button_insecure_data_storage_iv"
        android:layout_width="358dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="goToInsecureDataStorageIV"
        android:text="@string/btn_insecure_data_storage_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_insecure_data_storage_iii"
        app:strokeColor="#f3972b" />

    <Button
        android:id="@+id/btn_input_validation_issues_i"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="goToInputValidationIssuesI"
        android:text="@string/btn_input_validation_issues_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_insecure_data_storage_iv"
        app:strokeColor="#f3972b" />

    <Button
        android:id="@+id/btn_access_control_issues_i"
        android:layout_width="358dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="goToInputValidationIssuesII"
        android:text="@string/btn_access_control_issues_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_input_validation_issues_i"
        app:strokeColor="#f3972b" />

</androidx.constraintlayout.widget.ConstraintLayout>